<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"/>
        <RadioButton
            android:id="@+id/radioKeyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyword"/>

    </RadioGroup>
    <EditText
        android:id="@+id/editAddKeyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"/>



</LinearLayout>